--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
+mcp910/eclipse/.metadata/*
+mcp910/eclipse/.metadata
+mcp910/eclipse/.metadata/
 /mcp910/eclipse/.metadata/*
+/mcp910/eclipse/.metadata 
+/mcp910/eclipse/.metadata/
